# Quadruped-Robot

./: README.md
CAD/FULL/: Body_Servo_attach.SLDPRT  Quadruped_Robot_FULL_CAD.SLDASM  behind.SLDPRT  body.SLDASM  front.SLDPRT  leg.SLDASM  lower_leg.SLDPRT  lower_leg_parallel.SLDPRT  midbody.SLDPRT  parll1.SLDPRT  parll2.SLDPRT  side.SLDPRT  sidetop.SLDPRT  upper_leg.SLDPRT  upper_leg_right.SLDPRT
CAD/STL_files/BODY/: Body_Servo_attach.STL
CAD/STL_files/LEGS/print2time/: upper_leg_left.STL  upper_leg_right.STL
CAD/STL_files/LEGS/print4time/: lower_leg.STL  lower_leg_parallel.STL
CAD/body/: Body_Servo_attach.SLDPRT  body.SLDASM  front.SLDPRT  midbody.SLDPRT  parll1.SLDPRT  parll2.SLDPRT  side.SLDPRT  sidetop2.SLDPRT
CAD/leg/ARCHIVE/: Assemblage1.SLDASM  Pièce1.SLDPRT  Pièce2.SLDPRT  Pièce4.SLDPRT  assemblage.SLDASM  bottom_leg.SLDPRT  connect.SLDPRT
CAD/leg/left_leg/: leg.SLDASM  lower_leg.SLDPRT  lower_leg_parallel.SLDPRT  upper_leg.SLDPRT
CAD/leg/right_leg/: upper_leg_right.SLDPRT
CAD/servo/: connect.SLDPRT  servo.SLDPRT
Codes/GeneralIdea/: GeneralIdea.ino
Codes/LegTest/: LegTest.ino
Quadruped_Robot_Sim/: build.zsh
Quadruped_Robot_Sim/Quadruped_Robot_Sim/simulation/models/quadruped_robot/: quadruped_robot.sdf
Quadruped_Robot_Sim/Quadruped_Robot_Sim/simulation/models/quadruped_robot_fixed/: model.config  quadruped_robot_fixed.urdf
Quadruped_Robot_Sim/Quadruped_Robot_Sim/simulation/worlds/: quadruped_robot_fixed.world
Quadruped_Robot_Sim/description/: quadruped_robot.urdf  quadruped_robot.xacro
Quadruped_Robot_Sim/simulation/models/quadruped_robot/: model.config  quadruped_robot.sdf  quadruped_robot.urdf
Quadruped_Robot_Sim/simulation/models/quadruped_robot_fixed/: quadruped_robot_fixed.sdf  quadruped_robot_fixed.urdf
Quadruped_Robot_Sim/simulation/worlds/: quadruped_robot.world  quadruped_robot_fixed.world
URDF/: quadruped_sim.urdf
quadruped_ws/install/: local_setup.sh  setup.sh
quadruped_ws/install/gazebo_dev/share/gazebo_dev/: local_setup.sh  package.sh
quadruped_ws/install/gazebo_msgs/include/gazebo_msgs/gazebo_msgs/msg/detail/: link_state__description.c  model_state__description.c  performance_metrics__description.c  world_state__description.c
quadruped_ws/install/gazebo_msgs/include/gazebo_msgs/gazebo_msgs/srv/detail/: apply_body_wrench__description.c  apply_link_wrench__description.c  body_request__description.c  delete_light__description.c  delete_model__description.c  get_entity_state__description.c  get_joint_properties__description.c  get_light_properties__description.c  get_link_properties__description.c  get_model_state__description.c  get_physics_properties__description.c  joint_request__description.c  (+7 more)
quadruped_ws/install/gazebo_msgs/share/gazebo_msgs/: package.sh
quadruped_ws/install/gazebo_msgs/share/gazebo_msgs/cmake/: export_gazebo_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_gazebo_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_gazebo_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  gazebo_msgs__rosidl_typesupport_cExport-noconfig.cmake  gazebo_msgs__rosidl_typesupport_cppExport-noconfig.cmake  gazebo_msgs__rosidl_typesupport_cppExport.cmake  gazebo_msgs__rosidl_typesupport_introspection_cExport.cmake  gazebo_msgs__rosidl_typesupport_introspection_cppExport.cmake
quadruped_ws/install/gazebo_ros2_control/share/gazebo_ros2_control/: local_setup.sh  package.sh
quadruped_ws/install/pid/include/pid/: pid.hpp  utils.hpp
quadruped_ws/install/pid/share/pid/: local_setup.dsv  package.sh  package.xml
quadruped_ws/install/pid/share/pid/cmake/: ament_cmake_export_targets-extras.cmake  export_pidExport.cmake  pidConfig.cmake
quadruped_ws/install/quadruped_description/share/ament_index/resource_index/package_run_dependencies/: quadruped_description
quadruped_ws/install/quadruped_description/share/ament_index/resource_index/parent_prefix_path/: quadruped_description
quadruped_ws/install/quadruped_description/share/quadruped_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
quadruped_ws/install/quadruped_description/share/quadruped_description/cmake/: quadruped_descriptionConfig-version.cmake  quadruped_descriptionConfig.cmake
quadruped_ws/install/quadruped_description/share/quadruped_description/environment/: ament_prefix_path.dsv  path.dsv
quadruped_ws/install/quadruped_description/share/quadruped_description/launch/: quadruped_simulation.launch.py
quadruped_ws/install/quadruped_description/share/quadruped_description/simulation/worlds/: quadruped.world  quadruped_fixed.world
quadruped_ws/install/quadruped_description/share/quadruped_description/urdf/: gazebo.xacro  inertias.xacro  materials.xacro  quadruped.urdf  quadruped.xacro  quadruped_fixed.urdf
quadruped_ws/log/: latest_build
quadruped_ws/src/quadruped_description/: CMakeLists.txt  package.xml
quadruped_ws/src/quadruped_description/launch/: quadruped_simulation.launch.py
quadruped_ws/src/quadruped_description/simulation/models/quadruped/: model.config  quadruped.sdf
quadruped_ws/src/quadruped_description/simulation/models/quadruped_fixed/: model.config  quadruped_fixed.sdf
quadruped_ws/src/quadruped_description/simulation/worlds/: quadruped.world  quadruped_fixed.world
quadruped_ws/src/quadruped_description/urdf/: gazebo.xacro  quadruped.urdf  quadruped.xacro  quadruped_fixed.urdf
(+4 files in other folders)
